Import of SKIM/Mock-Person-DE-0.02 from CPAN.
gitpan-cpan-distribution: Mock-Person-DE
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SKIM/Mock-Person-DE-0.02.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -28,10 +28,10 @@ DESCRIPTION
 
 SUBROUTINES
     first_male()
-            Returns random fists name of male person.
+            Returns random first name of male person.
 
     first_female()
-            Returns random fists name of female person.
+            Returns random first name of female person.
 
     last_male()
             Returns random last name of male person.
@@ -48,7 +48,19 @@ SUBROUTINES
     name([$sex])
             Recieves scalar with sex of the person ('male' or 'female') and
             returns scalar with generated name. Default value of $sex
-            variable is 'male'.
+            variable is undef, that means random name.
+
+    name_male()
+            Returns random male name.
+
+    name_female()
+            Returns random female name.
+
+VARIABLES
+    TYPE
+             Name type.
+             Possible values are: 'two', 'three'.
+             Default value is 'three'.
 
 EXAMPLE1
      # Pragmas.
@@ -183,10 +195,11 @@ EXAMPLE2
      # Zimmermann
 
 DEPENDENCIES
-    Exporter, Readonly.
+    Exporter, List::MoreUtils, Readonly.
 
 SEE ALSO
-    Mock::Person, Mock::Person::SV, Mock::Person::RU.
+    Mock::Person, Mock::Person::CZ, Mock::Person::EN, Mock::Person::SK,
+    Mock::Person::SK::ROM, Mock::Person::SV, Mock::Person::RU.
 
 REPOSITORY
     <https://github.com/tupinek/Mock-Person-DE>
@@ -200,5 +213,5 @@ LICENSE AND COPYRIGHT
     BSD license.
 
 VERSION
-    0.01
+    0.02
 
