Import of SKIM/Mock-Person-DE-0.03 from CPAN.
gitpan-cpan-distribution: Mock-Person-DE
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SKIM/Mock-Person-DE-0.03.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.03 2013-09-22
+ - Fix bug in tests with name() subroutine.
+
 0.02 2013-09-21
  - Add link to Mock::Person::CZ in doc.
  - Add link to Mock::Person::EN in doc.
